refactor(core) merge core17 into core